syntax="proto3";

option go_package="gen/task";

import "google/protobuf/timestamp.proto";

service TaskService {
    rpc CreateTask(Task) returns (TaskResponse) {};
    rpc GetTask(GetTaskRequest) returns (TaskResponse) {};
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {};
    rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse) {};
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {};
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    string priority = 4;
    string status = 5;
    string user_id = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    google.protobuf.Timestamp due_date = 9;
    repeated string tags = 10;
}

enum TaskStatus {
    PENDING = 0;
    IN_PROGRESS = 1;
    COMPLETED = 2;
    CANCELLED = 3;
}

enum TaskPriorities {
    LOW = 0;
    NORMAL = 1;
    HIGH = 2;
    CRITICAL = 3;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string priority = 3;
    string user_id = 4;
    google.protobuf.Timestamp due_date = 5;
    repeated string tags = 6;
}

message GetTaskRequest {
    string task_id = 1;
}

message ListTasksRequest {
    string user_id = 1;
}

message ListTasksResponse {
    repeated Task tasks = 1;
    int32 total = 2;
}

message UpdateTaskRequest {
    string task_id = 1;
    string user_id = 2;
    string title = 3;
    string description = 4;
    string status = 5;
    google.protobuf.Timestamp due_date = 6;
    repeated string tags = 7;
}

message DeleteTaskRequest {
    string task_id = 1;
    string user_id = 2;
}

message TaskResponse {
    Task task = 1;
}

message DeleteTaskResponse {
    bool success = 1;
}